--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "apollo-server": "^3.3.0",
-    "graphql": "^15.6.0"
+    "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.6.0",
+    "graphql-fields": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
